Adds the ability to override the current css with a custom css file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -45,6 +45,7 @@ theme = "meghna-hugo"
 home= "Home"
 logo = "images/logo.png"
 gmapAPI = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA"
+custom_css = ["css/custom.css"]
 
     # Banner Section
     [params.banner]
