Adds dummy url variables to the examplesite config.toml, to lessen the confusion for new users

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -98,21 +98,28 @@ custom_css = ["css/custom.css"]
         # social Icons
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-facebook"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-twitter"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-google-outline"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-youtube"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-linkedin"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-dribbble-outline"
+        url = "#"
         
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-pinterest-outline"
+        url = "#"
