Fixes a mistake in the team.html where the url was hardcoded to #

--- a/exampleSite/data/team.yml
+++ b/exampleSite/data/team.yml
@@ -8,9 +8,13 @@ teamMember :
     description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
     socialIcon :
       - icon : tf-ion-social-facebook
+        url : "#"
       - icon : tf-ion-social-twitter
+        url : "#"
       - icon : tf-ion-social-linkedin
+        url : "#"
       - icon : tf-ion-social-dribbble-outline
+        url : "#"
       
   - image : images/team/team-2.jpg
     name : Frank Miller
@@ -18,9 +22,13 @@ teamMember :
     description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
     socialIcon :
       - icon : tf-ion-social-facebook
+        url : "#"
       - icon : tf-ion-social-twitter
+        url : "#"
       - icon : tf-ion-social-linkedin
+        url : "#"
       - icon : tf-ion-social-dribbble-outline
+        url : "#"
       
   - image : images/team/team-3.jpg
     name : Michael Jonson
@@ -28,9 +36,13 @@ teamMember :
     description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
     socialIcon :
       - icon : tf-ion-social-facebook
+        url : "#"
       - icon : tf-ion-social-twitter
+        url : "#"
       - icon : tf-ion-social-linkedin
+        url : "#"
       - icon : tf-ion-social-dribbble-outline
+        url : "#"
       
   - image : images/team/team-4.jpg
     name : Mo. Kha. Alamgir
@@ -38,6 +50,10 @@ teamMember :
     description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
     socialIcon :
       - icon : tf-ion-social-facebook
+        url : "#"
       - icon : tf-ion-social-twitter
+        url : "#"
       - icon : tf-ion-social-linkedin
+        url : "#"
       - icon : tf-ion-social-dribbble-outline
+        url : "#"
