Add Staticman comments support

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,8 +1,9 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
+DefaultContentLanguage = "en"
 title = "Meghna"
-
 theme = "meghna-hugo"
+
 
 # Menu
 [menu]
