--- a/exampleSite/data/blog.yml
+++ b/exampleSite/data/blog.yml
@@ -2,3 +2,7 @@ enable : true
 heading : Latest
 headingSpan : Posts
 sharing : true
+staticmanComments:
+  enable: false
+  notifications: true
+  api: https://dev.staticman.net/v3/entry/github/themefisher/meghna-hugo/master/comments
