Add page with informations about posts authors

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -4,6 +4,10 @@ DefaultContentLanguage = "en"
 title = "Meghna"
 theme = "meghna-hugo"
 
+[taxonomies]
+  author = "author"
+  category = "categories"
+  tag = "tags"
 
 # Menu
 [menu]
