--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 DefaultContentLanguage = "en"
 title = "Meghna"
 theme = "meghna-hugo"
+summaryLength = 10
 
 [taxonomies]
   author = "author"
