--- a/theme.toml
+++ b/theme.toml
@@ -2,7 +2,7 @@ name = "Meghna Hugo"
 license = "CC BY 3.0"
 licenselink = "https://creativecommons.org/licenses/by/3.0/"
 description = "Hugo port of the Themefisher’s Meghna Template"
-homepage = "https://github.com/themefisher/meghna-hugo"
+homepage = "https://themefisher.com/hugo-themes/"
 tags = ['landing-page', 'google-analytics', 'fast', 'modern', 'minimal', 'minimalistic', 'business', 'agency-template', 'themefisher', 'hugo-theme', 'hugo-templates', 'bootstrap', 'blog', 'responsive', 'portfolio', 'single-page', 'dark', 'clean', 'simple', 'company', 'creative', 'contact-form', 'custom-themes', 'mobile']
 features = ['bootstrap','responsive']
 min_version = "0.48"
