modified contact form map rendering

--- a/exampleSite/data/contact.yml
+++ b/exampleSite/data/contact.yml
@@ -3,7 +3,7 @@ heading : Get In
 headingSpan : Touch
 title : Contact Details
 content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.
-enable_maps : false
+enable_maps : true
 mapLatitude : 51.5223477
 mapLongitude: -0.1622023
 contactDetails :
