modified reamme file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -12,7 +12,7 @@ disqusShortname = "" # get your shortname form here : https://disqus.com
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
 # disable language
-disableLanguages = [""]
+disableLanguages = []
 
 ############################# Plugins ##########################
 # css plugins
