--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -4,10 +4,10 @@ cta:
   bg_image: images/Banner-wall.jpg
   bg_image_webp: images/Banner-wall.webp
   title: OUR VISION
-  content: **is to help your company being competitive in the local and world markets
+  content: is to help your company being competitive in the local and world markets
     by developing software applications at best price, at high quality and according
     to the agreed plan. Our services are provided in an environment based upon trust
-    and mutual respect**
+    and mutual respect.
   button:
     enable: true
     label: Start a project with us
