added public to gitignore
update baseurl with paisley.digital

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://paisley-digital.netlify.com/"
+baseURL = "https://paisley.digital/"
 disableLanguages = ["Fr"]
 disqusShortname = ""
 paginate = "6"
