--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -35,7 +35,7 @@ name = "Team"
 weight = 4
 [[menu.main]]
 URL = "blog"
-name = "Products"
+name = "Our Solutions"
 weight = "5"
 [[menu.main]]
 URL = "contact"
