--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -9,5 +9,5 @@ banner:
     \n\nWHO CAN HELP YOU BUILD A PRODUCT FROM ZERO TO HERO.\n"
   button:
     enable: true
-    label: EXPLORE US
-    link: "#services"
+    label: Start A Project With Us
+    link: "#contact"
