--- a/exampleSite/data/fr/banner.yml
+++ b/exampleSite/data/fr/banner.yml
@@ -8,5 +8,5 @@ banner:
   content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
   button:
     enable : true
-    label : "Explore Us"
+    label : "Start A Project With Us"
     link : "#services"
