--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -4,24 +4,24 @@ about:
   title: Why Us
   about_item:
   - icon: ti-cup
-    title: Cost-effective
+    title: Cost-Effective
     content: 'Due to our efficiency, our geographical location, agile building and
       manual and automated leverage testing your application will be developed at
       best-cost.
 
 '
   - icon: ti-ruler-pencil
-    title: Experienced engineers
+    title: Experienced Engineers
     content: With our own team of experienced software developers and quality engineers,
       managed by a high experienced tech lead ,Paisley is an attractive outsourcing’s
       partner for companies from all over the world.
   - icon: ti-cup
-    title: Reliable and trustworthy
+    title: Reliable and Trustworthy
     content: Our services are provided in an environment based upon trust and mutual
       respect. As part of that we are transparent and clear on technical solutions
       and project status and progress.
   - icon: ti-thought
-    title: High quality
+    title: High Quality
     content: Our development process and experienced team of software developers and
       quality engineers, make sure that from the beginning of the project quality
       is embedded in your software application.
