wall banner removed

--- a/exampleSite/data/en/funfacts.yml
+++ b/exampleSite/data/en/funfacts.yml
@@ -1,8 +1,8 @@
 ---
 funfacts:
   enable: true
-  bg_image: " images/Banner/Wall-Banner-03.jpg"
-  bg_image_webp: " images/Banner/Wall-Banner-03.webp"
+  bg_image:
+  bg_image_webp:
   counter_item:
   - title: Happy Clients
     icon: ti-face-smile
