--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -1,8 +1,8 @@
 ---
 cta:
   enable: true
-  bg_image: images/Banner/Wall-Banner-05.jpg
-  bg_image_webp: images/Banner/Wall-Banner-05.webp
+  bg_image:
+  bg_image_webp:
   title: OUR VISION
   content: is to help your company being competitive in the local and world markets
     by developing software applications at best price, at high quality and according
