--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -1,13 +1,13 @@
 ---
 banner:
   enable: true
-  bg_image_webp: images/Banner/Main-Banner-01.webp
-  bg_image: images/Banner/Main-Banner-01.jpg
+  bg_image_webp: images/Banner/Main-Banner-03.webp
+  bg_image: images/Banner/Main-Banner-03.jpg
+  logo_image: images/logo-brighter.png
   icon: ''
-  title: PAISLEY DIGITAL SERVICES
-  content: "\n    \nPAISLEY IS A DIGITAL ENABLEMENT TEAM OF HIGHLY SKILLED TALENTS
-    \n\nWHO CAN HELP YOU BUILD A PRODUCT FROM ZERO TO HERO.\n"
+  title: ''
+  content: "PAISLEY IS A DIGITAL ENABLEMENT TEAM OF HIGHLY SKILLED TALENTS WHO CAN HELP YOU BUILD A PRODUCT FROM ZERO TO HERO."
   button:
     enable: true
-    label: Start A Project With Us
+    label: START A PROJECT WITH US
     link: "#contact"
