Improve banner, navigation and whyus pages

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -60,7 +60,7 @@ link = "plugins/magnific-popup/magnific-popup.css"
 [[params.plugins.css]]
 link = "plugins/slick/slick.css"
 [[params.plugins.css]]
-link = "https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700&display=swap"
+link = "https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
 [[params.plugins.js]]
 link = "plugins/jquery/jquery.min.js"
 [[params.plugins.js]]
@@ -79,7 +79,7 @@ link = "plugins/lazy-load/lozad.min.js"
 link = "plugins/google-map/map.js"
 [params.preloader]
 enable = true
-preloader = "images/preloader-01.png"
+preloader = "images/logo-brighter.png"
 [[params.social]]
 icon = "ti-linkedin"
 link = "https://www.linkedin.com/company/paisley-digital/"
