--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -12,8 +12,8 @@ about:
 '
   - icon: ti-ruler-pencil
     title: Experienced Engineers
-    content: With our own team of experienced software developers and quality engineers,
-      managed by a high experienced tech lead ,Paisley is an attractive outsourcing’s
+    content: With our own team of experienced software developers,
+      managed by a high experienced tech lead, Paisley is an attractive outsourcing’s
       partner for companies from all over the world.
   - icon: ti-cup
     title: Reliable and Trustworthy
