Improve skills page

--- a/exampleSite/data/en/skill.yml
+++ b/exampleSite/data/en/skill.yml
@@ -1,7 +1,7 @@
 ---
 skill:
   enable: true
-  title: Developement Tools
+  title: Developement Experience
   subtitle: We’ve skilled in wide range of web and other digital market tools.
   content: |2
 
