Recolor CTA text

--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -5,7 +5,7 @@ cta:
   bg_image_webp:
   title: OUR VISION
   content: is to help your company being competitive in the local and world markets
-    by developing software applications at best price, at high quality and according
+    by developing  applications at best price, high quality and according
     to the agreed plan. Our services are provided in an environment based upon trust
     and mutual respect.
   button:
