Recolor CTA text

--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -7,7 +7,7 @@ cta:
   content: is to help your company being competitive in the local and world markets
     by developing  applications at best price, high quality and according
     to the agreed plan. Our services are provided in an environment based upon trust
-    and mutual respect.
+    and mutual respect..
   button:
     enable: true
     label: Start a project with us
