--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -1,8 +1,8 @@
 ---
 banner:
   enable: true
-  bg_image_webp: images/backgrounds/hero-area.webp
-  bg_image: images/backgrounds/espace.jpg
+  # bg_image_webp: images/backgrounds/hero-area.webp
+  bg_image_webp: images/backgrounds/espace_black.jpg
   icon: ''
   title: 'Ionsat '
   content: Un satellite par l'Ecole polytechnique
