--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -7,7 +7,7 @@ team:
     image_webp: images/team/team-1.webp
     image: images/team/team-1.jpg
     designation: ''
-    content: Project Manager
+    content: Digital Fellow
     social:
     - icon: ti-email
       link: 'mailto: amir.ebrahimkhani@gmail.com'
@@ -17,7 +17,7 @@ team:
     image_webp: images//team/team-3.webp
     image: images/team/team-3.jpg
     designation: ''
-    content: Tech Leader
+    content: Founder
     social:
     - icon: ti-email
       link: 'mailto: jzinedine@gmail.com'
@@ -27,7 +27,7 @@ team:
     image_webp: images/team/team-2.webp
     image: images/team/team-2.jpg
     designation: ''
-    content: Solution Architect
+    content: Technical Fellow
     social:
     - icon: ti-email
       link: 'mailto: meysam.tamkin@gmail.com'
