changes in services titles

--- a/exampleSite/data/en/feature.yml
+++ b/exampleSite/data/en/feature.yml
@@ -6,7 +6,7 @@ feature:
   title: FORMS OF ENGAGEMENT
   content: ''
   feature_item:
-  - title: 1. Offshore Software Development Team
+  - title: 1. Custom Software Development Team
     icon: ti-world
     content: |-
       We are specialized in setting up a dedicated software development team for your projects at our offices. We take care of the general management of the team and provide the necessary equipment and tools. And you and your team can take care of the daily technical management of the team members.+ Your fixed and own dedicated team of experienced software developers working as an extended team of your company.
