--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -139,6 +139,7 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 home = "Home"
+copyright = "copyright &copy; 2019 [gethugothemes](https://gethugothemes.com) all right reserved"
 
 ################################ France Language ########################
 [Languages.fr]
@@ -147,3 +148,4 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
+copyright = "copyright et copie; 2019 [gethugothemes] (https://gethugothemes.com) tous droits réservés"
