--- a/exampleSite/data/fr/portfolio.yml
+++ b/exampleSite/data/fr/portfolio.yml
@@ -8,7 +8,7 @@ portfolio:
       image : images/portfolio/portfolio-1.jpg
       image_webp : images/portfolio/portfolio-1.webp
       categories : ["design"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "https://themefisher.com"
       
     # portfolio item loop
@@ -16,7 +16,7 @@ portfolio:
       image : images/portfolio/portfolio-2.jpg
       image_webp : images/portfolio/portfolio-2.webp
       categories : ["development"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : ""
       
     # portfolio item loop
@@ -24,7 +24,7 @@ portfolio:
       image : images/portfolio/portfolio-3.jpg
       image_webp : images/portfolio/portfolio-3.webp
       categories : ["design", "development"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -32,7 +32,7 @@ portfolio:
       image : images/portfolio/portfolio-4.jpg
       image_webp : images/portfolio/portfolio-4.webp
       categories : ["photography", "development"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -40,7 +40,7 @@ portfolio:
       image : images/portfolio/portfolio-5.jpg
       image_webp : images/portfolio/portfolio-5.webp
       categories : ["design"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -48,7 +48,7 @@ portfolio:
       image : images/portfolio/portfolio-6.jpg
       image_webp : images/portfolio/portfolio-6.webp
       categories : ["photography"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -56,7 +56,7 @@ portfolio:
       image : images/portfolio/portfolio-7.jpg
       image_webp : images/portfolio/portfolio-7.webp
       categories : ["development"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -64,7 +64,7 @@ portfolio:
       image : images/portfolio/portfolio-8.jpg
       image_webp : images/portfolio/portfolio-8.webp
       categories : ["design", "development"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
       
     # portfolio item loop
@@ -72,5 +72,5 @@ portfolio:
       image : images/portfolio/portfolio-2.jpg
       image_webp : images/portfolio/portfolio-2.webp
       categories : ["design", "photography"]
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit.
       link : "#"
