--- a/exampleSite/data/en/contact.yml
+++ b/exampleSite/data/en/contact.yml
@@ -4,9 +4,9 @@ contact:
   title : Contact Us
   subtitle : Contact Details
   content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.
-  form_action: "#" #contact form works with https://formspree.io
 
-  contact_details :
+  # Contact details
+  contact_list:
     - icon : ti-location-pin # themify icon pack : https://themify.me/themify-icons
       info : "Khaja Road, Bayzid, Chittagong, Bangladesh"
       
@@ -18,3 +18,14 @@ contact:
       
     - icon : ti-email # themify icon pack : https://themify.me/themify-icons
       info : "Email: hello@meghna.com"
+
+
+  # Contact form
+  contact_form:
+    enable : true
+    form_action : "#" #contact form works with https://formspree.io
+    name : "Your Name"
+    email : "Your Email"
+    subject : "Subject"
+    message : "Message"
+    submit : "Submit"
