--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,5 @@
   command = "cd exampleSite && hugo --gc --themesDir ../.."
   
 [build.environment]
-  HUGO_VERSION = "0.60.1"
-  HUGO_THEME = "repo"
+  HUGO_VERSION = "0.71.1"
+  HUGO_THEME = "Meghna-Hugo"
