--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,54 +1,73 @@
 baseURL = "https://paisley.digital/"
-disableLanguages = ["Fr"]
-disqusShortname = ""
+# post pagination
 paginate = "6"
+# post excerpt
 summaryLength = "15"
 theme = "meghna-hugo"
 title = "Paisley Digital"
+# disqus short name
+disqusShortname = ""
+
+################################ English Language ########################
 [Languages.en]
 contentDir = "content/english"
 home = "Home"
 languageCode = "en-us"
 languageName = "En"
 weight = 1
-[Languages.fr]
-contentDir = "content/french"
-home = "Accueil"
-languageCode = "fr-fr"
-languageName = "Fr"
-weight = 2
+
+############################# Navigation ##################################
 [[menu.main]]
 URL = "about"
 name = "Why Us"
 weight = 1
+
 [[menu.main]]
 URL = "services"
 name = "Service"
 weight = 2
-[[menu.main]]
-URL = "blog"
-name = "Our Solution"
-weight = 3
+
 [[menu.main]]
 URL = "team"
 name = "Team"
-weight = 4
+weight = 3
+
 [[menu.main]]
 URL = "contact"
 name = "Contact Us"
+weight = 5
+
+[[menu.main]]
+URL = "blog"
+name = "Blog"
 weight = 6
+
+############################# Default Parameters ##########################
 [params]
+logo = "images/logo-gradiant-03.png"
+# Meta data
 author = "Themefisher"
 description = "Paisley Digital Services"
+# Google Analytics
 google_analitycs_id = "UA-160723399-1"
-logo = "images/logo-gradiant-03.png"
+# post share
 post_share = true
+
+# google map
 [params.map]
 enable = false
 gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
 map_latitude = "51.5223477"
 map_longitude = "-0.1622023"
 map_marker = "images/marker.png"
+
+# preloader
+[params.preloader]
+enable = true
+preloader = "images/logo-brighter.png"
+
+############################# Plugins ##########################
+# css plugins
 [[params.plugins.css]]
 link = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
@@ -61,6 +80,8 @@ link = "plugins/magnific-popup/magnific-popup.css"
 link = "plugins/slick/slick.css"
 [[params.plugins.css]]
 link = "https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
+
+# js plugins
 [[params.plugins.js]]
 link = "plugins/jquery/jquery.min.js"
 [[params.plugins.js]]
@@ -77,9 +98,8 @@ link = "plugins/wow/wow.min.js"
 link = "plugins/lazy-load/lozad.min.js"
 [[params.plugins.js]]
 link = "plugins/google-map/map.js"
-[params.preloader]
-enable = true
-preloader = "images/logo-brighter.png"
+
+############################# social icons ##########################
 [[params.social]]
 icon = "ti-linkedin"
 link = "https://www.linkedin.com/company/paisley-digital/"
