Fix a small typo (obviously from automatic translation :-)

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -148,4 +148,4 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
-copyright = "copyright et copie; 2020 [gethugothemes] (https://gethugothemes.com) tous droits réservés"
+copyright = "copyright &copy; 2020 [gethugothemes](https://gethugothemes.com) tous droits réservés"
