Edited the I am genius part.

--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -13,4 +13,4 @@ about:
 
   - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
     title : We're Genius
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+    content : I am genius. Jezrael Visaya is Genius.
