--- a/themes/meghna-hugo/netlify.toml
+++ b/themes/meghna-hugo/netlify.toml
@@ -5,4 +5,4 @@
 [build.environment]
   HUGO_VERSION = "0.73.0"
   HUGO_THEME = "repo"
-  HUGO_BASEURL = "/"
+  HUGO_BASEURL = "https://github.com/escortcvh/meghna-hugo"
